<package>
	<name>droneObstacleAvoiderROSModule</name>
	<version>1.0.1</version>
	<description>
    		This package is droneObstacleAvoiderROSModule.
	</description>
	<author email="rafagjordana@gmail.com">Rafael Gómez-Jordana</author>
	<maintainer email="rafagjordana@gmail.com">Rafael Gómez-Jordana</maintainer>
  	<license>BSD</license>
	<url>http://ros.org/wiki/droneObstacleAvoiderROSModule</url>

  	<buildtool_depend>catkin</buildtool_depend>

  	<build_depend>roscpp</build_depend>
	<build_depend>std_msgs</build_depend>
	<build_depend>geometry_msgs</build_depend>
    <build_depend>droneObstacleAvoider</build_depend>
	<build_depend>droneModuleROS</build_depend>
	<build_depend>droneMsgsROS</build_depend>
    <build_depend>droneMidLevelAutopilot</build_depend>

	<run_depend>roscpp</run_depend>
	<run_depend>std_msgs</run_depend>
	<run_depend>geometry_msgs</run_depend>
    <run_depend>droneObstacleAvoider</run_depend>
	<run_depend>droneModuleROS</run_depend>
	<run_depend>droneMsgsROS</run_depend>
    <run_depend>droneMidLevelAutopilot</run_depend>
  
</package>


